continue working on the lbl2vec model and impact of keywords

--- a/models/topic_clustering/tfidf_kmeans.ipynb
+++ b/models/topic_clustering/tfidf_kmeans.ipynb
@@ -505,6 +505,16 @@
     "    else:\n",
     "        y += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Problem:**\n",
+    ">\n",
+    "> - Semi-supervised =/= Unsupervised\n",
+    "> - Still need more or less 20 documents PER CLASS to be close to the centroid using supervised method"
+   ]
   }
  ],
  "metadata": {
