work on assignment confidence and number of iterations needed

--- a/lbl2vec/performances.ipynb
+++ b/lbl2vec/performances.ipynb
@@ -40,20 +40,23 @@
     "    keywords_cached_df = pd.read_csv(f'cache/{dataset_name}_spacy_keywords.csv')\n",
     "    keywords_cached_df['class_result_keywords'] = keywords_cached_df['class_result_keywords'].apply(lambda x: x[1:-1].replace(\"'\", '').split(', '))\n",
     "    similar_keywords = dict(zip(keywords_cached_df['class_raw_keywords'], keywords_cached_df['class_result_keywords']))\n",
-    "    labels_df['class_keywords'] = labels_df.apply(\n",
+    "    labels_df['class_result_keywords'] = labels_df.apply(\n",
     "        lambda row: similar_keywords[row['class_keywords']][:n_words], axis=1\n",
     "    )\n",
+    "    documents_df['class_keywords'] = documents_df['class_name'].apply(lambda class_name: labels_df[labels_df['class_name'] == class_name]['class_keywords'].values[0])\n",
     "\n",
     "    # -- Evaluation\n",
     "    avg_f1_score_train = 0\n",
     "    avg_f1_score_test = 0\n",
     "\n",
     "    for i in range(n_iterations):\n",
+    "        print(f'[INFO] {dataset_name} | Iteration {i+1}/{n_iterations}...' + ' ' * 20, end='\\r')\n",
+    "\n",
     "        # -- Model\n",
     "        lbl2vec_model = Lbl2Vec(\n",
-    "            keywords_list=[item for item in labels_df['class_keywords']], \n",
+    "            keywords_list=[item for item in labels_df['class_result_keywords']], \n",
     "            tagged_documents=list(documents_df['tagged_docs'][documents_df['dataset_type'] == 'train']), \n",
-    "            label_names=list(labels_df['class_name']),\n",
+    "            label_names=[item for item in labels_df['class_keywords']], \n",
     "            min_count=2,\n",
     "            verbose=False\n",
     "        )\n",
@@ -65,10 +68,10 @@
     "        evaluation_train = train_docs_lbl_similarities.merge(documents_df[documents_df['dataset_type']=='train'], left_on='doc_key', right_on='doc_key')\n",
     "        evaluation_test = test_docs_lbl_similarities.merge(documents_df[documents_df['dataset_type']=='test'], left_on='doc_key', right_on='doc_key')\n",
     "\n",
-    "        y_true_train = evaluation_train['class_name']\n",
+    "        y_true_train = evaluation_train['class_keywords']\n",
     "        y_pred_train = evaluation_train['most_similar_label']\n",
     "\n",
-    "        y_true_test = evaluation_test['class_name']\n",
+    "        y_true_test = evaluation_test['class_keywords']\n",
     "        y_pred_test = evaluation_test['most_similar_label']\n",
     "\n",
     "        current_f1_score_train = f1_score(y_true_train, y_pred_train, average='micro')\n",
