--- a/topic_modeling/vontss/test_01.ipynb
+++ b/topic_modeling/vontss/test_01.ipynb
@@ -13,7 +13,10 @@
     "sys.path.append(\"..\")\n",
     "from ris_evaluation.evaluator import Evaluator\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sns"
    ]
   },
   {
@@ -27,6 +30,13 @@
     "\n",
     "documents = documents_df['document'].tolist()\n",
     "labels = documents_df['class_name'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First test"
    ]
   },
   {
@@ -442,6 +452,92 @@
    "metadata": {},
    "source": [
     "TODO: randomness + most important words as with LDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Most important words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_top_words = 10\n",
+    "x, y = 0, 0\n",
+    "colors = ['tab:blue', 'tab:orange', 'tab:green', 'tab:red', 'tab:purple']\n",
+    "\n",
+    "# Plotting the important words by topics and their importance\n",
+    "fig, axes = plt.subplots(3, 2, figsize=(12, 12), sharey=True)\n",
+    "fig.suptitle('Important words by topics and their importance', fontsize=18, fontweight='bold')\n",
+    "\n",
+    "for topic_idx, topic in enumerate(set(results_df['y_pred'].tolist())):\n",
+    "    features = words_by_extracted_topics[topic].keys()\n",
+    "    features_values = words_by_extracted_topics[topic].values()    \n",
+    "    features = [x for _, x in sorted(zip(features_values, features), reverse=True)]\n",
+    "\n",
+    "    ax = axes[x, y]\n",
+    "    ax.set_title(f'Topic {topic_idx}', fontsize=12, fontweight='bold')\n",
+    "    ax.bar(features, features_values, color=colors[topic_idx])\n",
+    "    ax.set_xlabel('Words')\n",
+    "    ax.set_ylabel('Importance')\n",
+    "    ax.xaxis.set_ticks(features)\n",
+    "    ax.set_xticklabels(features, rotation=45, ha='right')\n",
+    "\n",
+    "    if y == 1:\n",
+    "        x += 1\n",
+    "        y = 0\n",
+    "    else:\n",
+    "        y += 1\n",
+    "\n",
+    "fig.delaxes(axes[2, 1])\n",
+    "fig.tight_layout(pad=2.0, rect=[-0.02, -0.02, 1.02, 1])\n",
+    "fig.savefig('../../figures/vontss/important_words_by_topics.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Randomness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_iter = 5\n",
+    "metrics_df = pd.DataFrame()\n",
+    "\n",
+    "for iter in range(n_iter):\n",
+    "    topic_model = TopicModel(numb_embeddings=len(set(labels)))\n",
+    "\n",
+    "    model_output = topic_model.train_model(documents)\n",
+    "    y_pred, y_pred_probas = topic_model.fit_transform(documents)\n",
+    "\n",
+    "    results_df = pd.DataFrame()\n",
+    "    results_df['document'] = documents\n",
+    "    results_df['y_true'] = documents_df['class_name'].tolist()\n",
+    "    results_df['y_pred'] = y_pred_probas.argmax(axis=1)\n",
+    "    results_df['y_pred_highest_proba'] = y_pred_probas.max(axis=1)\n",
+    "\n",
+    "    evaluator = Evaluator(model_output)\n",
+    "\n",
+    "    words_by_extracted_topics = get_words_for_topics(results_df['y_pred'].tolist())\n",
+    "    words_by_class = get_words_for_topics(results_df['y_true'].tolist())\n",
+    "\n",
+    "    coherence = evaluator.compute_coherence()\n",
+    "    diversity = evaluator.compute_diversity()\n",
+    "    supervised_correlation = evaluator.compute_supervised_correlation(words_by_extracted_topics, words_by_class)\n",
+    "\n",
+    "    metrics_df_iter = pd.DataFrame()\n",
+    "    "
    ]
   }
  ],
