add more models to the tm to tc section and update readme

--- a/tm_comparison/test01.ipynb
+++ b/tm_comparison/test01.ipynb
@@ -204,6 +204,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [LDAModel, BERTopicModel]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BBC News"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
@@ -317,206 +333,63 @@
     }
    ],
    "source": [
-    "metrics_df = compute_metrics_df(dataset_names=[\n",
-    "    'BBC_News',\n",
-    "    '20NewsGroup',\n",
-    "    'DBLP',\n",
-    "    'M10',\n",
-    "], models=[\n",
-    "    LDAModel,\n",
-    "    BERTopicModel\n",
-    "], n_iterations=5)"
+    "bbc_news_metrics_df = compute_metrics_df(dataset_names=['BBC_News'], models=models, n_iterations=5)\n",
+    "print(bbc_news_metrics_df.to_latex(index=False))\n",
+    "bbc_news_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 20NewsGroup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>model</th>\n",
-       "      <th>coherence_c_v</th>\n",
-       "      <th>coherence_c_uci</th>\n",
-       "      <th>coherence_c_npmi</th>\n",
-       "      <th>coherence_u_mass</th>\n",
-       "      <th>diversity</th>\n",
-       "      <th>supervised_correlation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>BBC_News</td>\n",
-       "      <td>LDAModel</td>\n",
-       "      <td>0.507245</td>\n",
-       "      <td>-0.224381</td>\n",
-       "      <td>0.026653</td>\n",
-       "      <td>-2.237404</td>\n",
-       "      <td>0.920000</td>\n",
-       "      <td>0.824987</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BBC_News</td>\n",
-       "      <td>BERTopicModel</td>\n",
-       "      <td>0.480479</td>\n",
-       "      <td>-0.194804</td>\n",
-       "      <td>0.021948</td>\n",
-       "      <td>-2.220241</td>\n",
-       "      <td>0.856667</td>\n",
-       "      <td>0.701449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20NewsGroup</td>\n",
-       "      <td>LDAModel</td>\n",
-       "      <td>0.600076</td>\n",
-       "      <td>0.660461</td>\n",
-       "      <td>0.091718</td>\n",
-       "      <td>-1.767074</td>\n",
-       "      <td>0.743000</td>\n",
-       "      <td>0.611222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20NewsGroup</td>\n",
-       "      <td>BERTopicModel</td>\n",
-       "      <td>0.510362</td>\n",
-       "      <td>0.175887</td>\n",
-       "      <td>0.067621</td>\n",
-       "      <td>-2.255179</td>\n",
-       "      <td>0.827619</td>\n",
-       "      <td>0.382447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DBLP</td>\n",
-       "      <td>LDAModel</td>\n",
-       "      <td>0.566795</td>\n",
-       "      <td>0.094171</td>\n",
-       "      <td>0.038986</td>\n",
-       "      <td>-1.931211</td>\n",
-       "      <td>0.830000</td>\n",
-       "      <td>0.612566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DBLP</td>\n",
-       "      <td>BERTopicModel</td>\n",
-       "      <td>0.555418</td>\n",
-       "      <td>-0.304531</td>\n",
-       "      <td>0.022946</td>\n",
-       "      <td>-2.246640</td>\n",
-       "      <td>0.760000</td>\n",
-       "      <td>0.299963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>M10</td>\n",
-       "      <td>LDAModel</td>\n",
-       "      <td>0.457851</td>\n",
-       "      <td>-0.061817</td>\n",
-       "      <td>0.016673</td>\n",
-       "      <td>-2.270753</td>\n",
-       "      <td>0.838000</td>\n",
-       "      <td>0.520814</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>M10</td>\n",
-       "      <td>BERTopicModel</td>\n",
-       "      <td>0.515526</td>\n",
-       "      <td>-2.204118</td>\n",
-       "      <td>-0.050275</td>\n",
-       "      <td>-2.546092</td>\n",
-       "      <td>0.914545</td>\n",
-       "      <td>0.626878</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       dataset          model  coherence_c_v  coherence_c_uci  \\\n",
-       "0     BBC_News       LDAModel       0.507245        -0.224381   \n",
-       "1     BBC_News  BERTopicModel       0.480479        -0.194804   \n",
-       "2  20NewsGroup       LDAModel       0.600076         0.660461   \n",
-       "3  20NewsGroup  BERTopicModel       0.510362         0.175887   \n",
-       "4         DBLP       LDAModel       0.566795         0.094171   \n",
-       "5         DBLP  BERTopicModel       0.555418        -0.304531   \n",
-       "6          M10       LDAModel       0.457851        -0.061817   \n",
-       "7          M10  BERTopicModel       0.515526        -2.204118   \n",
-       "\n",
-       "   coherence_c_npmi  coherence_u_mass  diversity  supervised_correlation  \n",
-       "0          0.026653         -2.237404   0.920000                0.824987  \n",
-       "1          0.021948         -2.220241   0.856667                0.701449  \n",
-       "2          0.091718         -1.767074   0.743000                0.611222  \n",
-       "3          0.067621         -2.255179   0.827619                0.382447  \n",
-       "4          0.038986         -1.931211   0.830000                0.612566  \n",
-       "5          0.022946         -2.246640   0.760000                0.299963  \n",
-       "6          0.016673         -2.270753   0.838000                0.520814  \n",
-       "7         -0.050275         -2.546092   0.914545                0.626878  "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "metrics_df"
+    "newsgroups_metrics_df = compute_metrics_df(dataset_names=['20NewsGroup'], models=models, n_iterations=5)\n",
+    "print(newsgroups_metrics_df.to_latex(index=False))\n",
+    "newsgroups_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DBLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{tabular}{llrrrrrr}\n",
-      "\\toprule\n",
-      "dataset & model & coherence_c_v & coherence_c_uci & coherence_c_npmi & coherence_u_mass & diversity & supervised_correlation \\\\\n",
-      "\\midrule\n",
-      "BBC_News & LDAModel & 0.507245 & -0.224381 & 0.026653 & -2.237404 & 0.920000 & 0.824987 \\\\\n",
-      "BBC_News & BERTopicModel & 0.480479 & -0.194804 & 0.021948 & -2.220241 & 0.856667 & 0.701449 \\\\\n",
-      "20NewsGroup & LDAModel & 0.600076 & 0.660461 & 0.091718 & -1.767074 & 0.743000 & 0.611222 \\\\\n",
-      "20NewsGroup & BERTopicModel & 0.510362 & 0.175887 & 0.067621 & -2.255179 & 0.827619 & 0.382447 \\\\\n",
-      "DBLP & LDAModel & 0.566795 & 0.094171 & 0.038986 & -1.931211 & 0.830000 & 0.612566 \\\\\n",
-      "DBLP & BERTopicModel & 0.555418 & -0.304531 & 0.022946 & -2.246640 & 0.760000 & 0.299963 \\\\\n",
-      "M10 & LDAModel & 0.457851 & -0.061817 & 0.016673 & -2.270753 & 0.838000 & 0.520814 \\\\\n",
-      "M10 & BERTopicModel & 0.515526 & -2.204118 & -0.050275 & -2.546092 & 0.914545 & 0.626878 \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(metrics_df.to_latex(index=False))"
+    "dblp_metrics_df = compute_metrics_df(dataset_names=['DBLP'], models=models, n_iterations=5)\n",
+    "print(dblp_metrics_df.to_latex(index=False))\n",
+    "dblp_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## M10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m10_metrics_df = compute_metrics_df(dataset_names=['M10'], models=models, n_iterations=5)\n",
+    "print(m10_metrics_df.to_latex(index=False))\n",
+    "m10_metrics_df"
    ]
   }
  ],
