--- a/topic_modeling/vontss/test_01.ipynb
+++ b/topic_modeling/vontss/test_01.ipynb
@@ -537,7 +537,15 @@
     "    supervised_correlation = evaluator.compute_supervised_correlation(words_by_extracted_topics, words_by_class)\n",
     "\n",
     "    metrics_df_iter = pd.DataFrame()\n",
-    "    "
+    "\n",
+    "    for coherence_type, coherence_value in coherence.items():\n",
+    "        metrics_df_iter[f'Coherence ({coherence_type})'] = [coherence_value]\n",
+    "    metrics_df_iter['Diversity'] = [diversity]\n",
+    "    metrics_df_iter['Supervised correlation'] = [supervised_correlation]\n",
+    "\n",
+    "    metrics_df = pd.concat([metrics_df, metrics_df_iter])\n",
+    "\n",
+    "metrics_df"
    ]
   }
  ],
