add vontss results and continue refactoring

--- a/tm_comparison/test01.ipynb
+++ b/tm_comparison/test01.ipynb
@@ -18,7 +18,13 @@
     "import numpy as np\n",
     "\n",
     "from bertopic import BERTopic\n",
-    "from umap import UMAP"
+    "from umap import UMAP\n",
+    "\n",
+    "from gensim import corpora\n",
+    "import gensim\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -29,21 +35,42 @@
    "source": [
     "class Model:\n",
     "\n",
-    "    def __init__(self, documents_df) -> None:\n",
-    "        self.documents_df = documents_df.copy()\n",
+    "    def __init__(self, dataset_name: str) -> None:\n",
+    "        self.dataset_name = dataset_name\n",
+    "\n",
+    "        self.documents_df = pd.read_csv(f'../../datasets/data/{dataset_name}/documents.csv')\n",
+    "        self.documents_df = self.documents_df\n",
+    "\n",
     "        self.documents = self.documents_df['document'].tolist()\n",
     "        self.labels = self.documents_df['class_name'].tolist()\n",
     "\n",
+    "        self.labels_df = pd.read_csv(f'../../datasets/data/{dataset_name}/labels.csv')\n",
+    "        self.defined_keywords = [keywords.split(' ') for keywords in self.labels_df['class_keywords'].tolist()]\n",
+    "\n",
+    "        self.num_topics = len(set(self.labels))\n",
+    "        self.random_n_iter = 5\n",
+    "\n",
     "    def train(self):\n",
+    "        \"\"\" Train the model \"\"\"\n",
     "        raise NotImplementedError\n",
     "    \n",
     "    def get_output(self):\n",
+    "        \"\"\" Get the output of the model on the OCTIS format \"\"\"\n",
     "        raise NotImplementedError\n",
     "    \n",
     "    def get_results_df(self):\n",
+    "        \"\"\" Get the results of the model on a DataFrame \"\"\"\n",
     "        raise NotImplementedError\n",
     "    \n",
     "    def get_words_for_topics(self, topics):\n",
+    "        \"\"\" Get the words for each topic from the documents\n",
+    "\n",
+    "        Args:\n",
+    "            topics (list): The topics for each document\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: The words for each topic\n",
+    "        \"\"\"\n",
     "        words_by_topics = {}\n",
     "        for idx, topic in enumerate(topics):\n",
     "            words = self.documents_df.iloc[idx]['document'].split()\n",
@@ -68,18 +95,19 @@
    "source": [
     "class LDAModel(Model):\n",
     "\n",
-    "    def __init__(self, documents_df) -> None:\n",
-    "        super().__init__(documents_df)\n",
-    "        self.n_topics = len(set(self.labels))\n",
+    "    def __init__(self, dataset_name: str) -> None:\n",
+    "        super().__init__(dataset_name)\n",
     "\n",
     "    def train(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
     "        self.vectorizer = CountVectorizer()\n",
     "        X = self.vectorizer.fit_transform(self.documents)\n",
     "\n",
-    "        self.lda = LatentDirichletAllocation(n_components=self.n_topics)\n",
+    "        self.lda = LatentDirichletAllocation(n_components=self.num_topics)\n",
     "        self.lda.fit(X)\n",
     "\n",
     "    def get_results_df(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
     "        results_df = pd.DataFrame()\n",
     "        results_df['document'] = self.documents\n",
     "        results_df['y_true'] = self.labels\n",
@@ -90,6 +118,7 @@
     "        return results_df\n",
     "\n",
     "    def get_output(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
     "        topics = []\n",
     "        for topic in self.lda.components_:\n",
     "            topic_words = []\n",
@@ -113,15 +142,17 @@
    "source": [
     "class BERTopicModel(Model):\n",
     "\n",
-    "    def __init__(self, documents_df) -> None:\n",
-    "        super().__init__(documents_df)\n",
-    "        self.n_topics = len(set(self.labels)) + 1  # +1 for outliers\n",
+    "    def __init__(self, dataset_name: str) -> None:\n",
+    "        super().__init__(dataset_name)\n",
+    "        self.num_topics = len(set(self.labels)) + 1  # +1 for outliers\n",
     "\n",
     "    def train(self):\n",
-    "        self.bert_model = BERTopic(language=\"english\", calculate_probabilities=True, nr_topics=self.n_topics)\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
+    "        self.bert_model = BERTopic(language=\"english\", calculate_probabilities=True, nr_topics=self.num_topics)\n",
     "        self.topics, self.probs = self.bert_model.fit_transform(self.documents)\n",
     "\n",
     "    def get_results_df(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
     "        results_df = pd.DataFrame()\n",
     "        results_df['document'] = self.documents\n",
     "        results_df['y_true'] = self.labels\n",
@@ -133,12 +164,89 @@
     "        return relevant_results_df\n",
     "    \n",
     "    def get_output(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
     "        return {\n",
     "            \"topics\": [item for item in self.bert_model.get_topic_info()[\"Representation\"]],\n",
     "            \"topic-document-matrix\": self.probs.transpose(),\n",
     "            \"topic-word-matrix\": self.bert_model.c_tf_idf_,\n",
     "            \"test-topic-document-matrix\": self.probs.transpose()\n",
     "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GuidedLDA(Model):\n",
+    "\n",
+    "    def __init__(self, dataset_name: str) -> None:\n",
+    "        super().__init__(dataset_name)\n",
+    "\n",
+    "    def train(self) -> None:\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
+    "        self.texts = [document.split(' ') for document in self.documents]\n",
+    "        \n",
+    "        self.dictionary = corpora.Dictionary(self.texts)\n",
+    "        self.corpus = [self.dictionary.doc2bow(text) for text in self.texts]\n",
+    "\n",
+    "        priors = {}\n",
+    "        for idx, keywords in enumerate(self.defined_keywords):\n",
+    "            for keyword in keywords:\n",
+    "                priors[keyword] = idx\n",
+    "\n",
+    "        eta = np.full(shape=(self.num_topics, len(self.dictionary)), fill_value=1) # create a (ntopics, nterms) matrix and fill with 1\n",
+    "        for word, topic in priors.items(): # for each word in the list of priors\n",
+    "            keyindex = [index for index,term in self.dictionary.items() if term == word] # look up the word in the dictionary\n",
+    "            if (len(keyindex) > 0): # if it's in the dictionary\n",
+    "                eta[topic,keyindex[0]] = 1e7  # put a large number in there\n",
+    "        eta = np.divide(eta, eta.sum(axis=0)) # normalize so that the probabilities sum to 1 over all topics\n",
+    "\n",
+    "        with (np.errstate(divide='ignore')):  # ignore divide-by-zero warnings\n",
+    "            self.model = gensim.models.ldamodel.LdaModel(\n",
+    "                corpus=self.corpus, id2word=self.dictionary, num_topics=self.num_topics,\n",
+    "                random_state=42, chunksize=100, eta=eta,\n",
+    "                eval_every=-1, update_every=1,\n",
+    "                passes=150, alpha='auto', per_word_topics=True)\n",
+    "\n",
+    "    def get_results_df(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
+    "        self.results_df = pd.DataFrame()\n",
+    "        self.results_df['document'] = self.documents\n",
+    "        self.results_df['y_true'] = self.documents_df['class_name'].tolist()\n",
+    "\n",
+    "        scores = [[value[1] for value in score_values[0]] for score_values in self.model[self.corpus]]\n",
+    "        self.results_df['y_pred'] = [np.argmax(score) for score in scores]\n",
+    "        self.results_df['y_pred_highest_proba'] = [np.max(score) for score in scores]\n",
+    "        return self.results_df\n",
+    "    \n",
+    "    def get_output(self):\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
+    "        return {\n",
+    "            \"topics\": [self.model.show_topic(topicid, topn=10) for topicid in range(self.num_topics)],\n",
+    "            \"topic-document-matrix\": None,\n",
+    "            \"topic-word-matrix\": None,\n",
+    "            \"test-topic-document-matrix\": None\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GuidedBERTopicModel(BERTopicModel):\n",
+    "\n",
+    "    def __init__(self, dataset_name: str) -> None:\n",
+    "        super().__init__(dataset_name)\n",
+    "\n",
+    "    def train(self) -> None:\n",
+    "        \"\"\" See the documentation of the parent class \"\"\"\n",
+    "        umap = UMAP(n_neighbors=15, n_components=5, min_dist=0.0, metric='cosine', low_memory=False, random_state=0)\n",
+    "        self.model = BERTopic(language=\"english\", calculate_probabilities=True, nr_topics=self.num_topics, umap_model=umap, seed_topic_list=self.defined_keywords)\n",
+    "        self.model.fit(self.documents)"
    ]
   },
   {
